--- a/style.css
+++ b/style.css
@@ -21,18 +21,22 @@ h5{
 .content{
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
 }
 #screen{
     width: 370px;
     height: 80px;
     border: solid 1px grey;
+    border-radius: 20px;
     font-size: 30px;
+}
+#clr{
+    margin-top: 20px;
+    margin-left: 10px;
 }
 .row1{
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 .row2{
     display: flex;
